# sonic-sdi-framework

./: Makefile.am  NEWS  README.md  configure.ac  package.cfg
debian/: changelog  control  libsonic-sdi-framework-dev.install
sonic/: sdi_bus.h  sdi_driver_internal.h  sdi_i2c.h  sdi_io_port_api.h  sdi_media_internal.h  sdi_sys_common.h
src/: sdi_bus_api.c  sdi_io_port_api.c  sdi_resource_framework.c
